# LocalVideoUploader-en

./: .env.example  .gitignore  Package.swift  Privacy Policy.md  README.md  Terms of Service.md  config.example.json  iPhoto2YouTube.command  iPhoto2YouTube_API_Documentation.md  pyproject.toml
Sources/iPhoto2YouTubeNativeApp/: AppViewModel.swift  CLIService.swift  ContentView.swift  Models.swift  PhotoLibraryService.swift  iPhoto2YouTubeNativeApp.swift
iPhoto2YouTubeNativeApp.xcodeproj/: project.pbxproj
iPhoto2YouTubeNativeApp.xcodeproj/xcshareddata/xcschemes/: iPhoto2YouTubeNativeApp.xcscheme
script/: build_and_run.sh
src/iphoto2youtube_cli/: __init__.py  app.py  cli.py  config.py  exceptions.py  media_info.py  metadata.py  models.py  storage.py  validators.py
src/iphoto2youtube_cli/services/: auth.py  youtube.py
tests/: test_batch_upload.py  test_cli_settings.py  test_quota_usage.py  test_upload_flow.py  test_youtube_service.py
tests/iPhoto2YouTubeNativeAppTests/: BatchUploadManifestBuilderTests.swift
